@@ -10,18 +10,17 @@ import io.github.portlek.realmformat.format.realm.v1.RealmFormatWorldV1;
 import io.github.shiruka.nbt.CompoundTag;
 import io.github.shiruka.nbt.ListTag;
 import io.github.shiruka.nbt.Tag;
+import io.github.shiruka.nbt.stream.NBTInputStream;
 import java.io.ByteArrayInputStream;
 import java.io.DataInputStream;
-import java.io.FileInputStream;
 import java.io.IOException;
 import java.nio.ByteBuffer;
 import java.nio.ByteOrder;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.Map;
+import java.util.*;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import java.util.zip.GZIPInputStream;
 import java.util.zip.InflaterInputStream;
 import lombok.Cleanup;
@@ -36,20 +35,20 @@ public class AnvilFormatSerializer {
 
   @NotNull
   public RealmFormatWorld deserialize(@NotNull final Path worldDirectory) throws IOException {
-    final var levelPath = worldDirectory.resolve("level.dat");
-    final var regionPath = worldDirectory.resolve("region");
-    final var entitiesPath = worldDirectory.resolve("entities");
-    final var levelData = AnvilFormatSerializer.readLevelData(levelPath);
-    final var worldVersion = levelData.version();
+    final Path levelPath = worldDirectory.resolve("level.dat");
+    final Path regionPath = worldDirectory.resolve("region");
+    final Path entitiesPath = worldDirectory.resolve("entities");
+    final AnvilFormatLevelData levelData = AnvilFormatSerializer.readLevelData(levelPath);
+    final byte worldVersion = levelData.version();
     if (!Files.exists(regionPath) || !Files.isDirectory(regionPath)) {
       throw new IllegalArgumentException("'region' directory not found or it's not a directory!");
     }
-    final var chunks = new HashMap<RealmFormatChunkPosition, RealmFormatChunk>();
-    try (final var regionPathsStream = Files.list(regionPath)) {
-      final var regionPaths = regionPathsStream
+    final Map<RealmFormatChunkPosition, RealmFormatChunk> chunks = new HashMap<>();
+    try (final Stream<Path> regionPathsStream = Files.list(regionPath)) {
+      final List<Path> regionPaths = regionPathsStream
         .filter(name -> name.toString().endsWith(".mca"))
-        .toList();
-      for (final var path : regionPaths) {
+        .collect(Collectors.toList());
+      for (final Path path : regionPaths) {
         chunks.putAll(AnvilFormatSerializer.loadChunks(path, worldVersion));
       }
     }
@@ -57,17 +56,17 @@ public class AnvilFormatSerializer {
       throw new IllegalArgumentException("Chunks not found!");
     }
     if (Files.exists(entitiesPath)) {
-      try (final var entityPathsStream = Files.list(entitiesPath)) {
-        final var entityPaths = entityPathsStream
+      try (final Stream<Path> entityPathsStream = Files.list(entitiesPath)) {
+        final List<Path> entityPaths = entityPathsStream
           .filter(name -> name.toString().endsWith(".mca"))
-          .toList();
-        for (final var path : entityPaths) {
+          .collect(Collectors.toList());
+        for (final Path path : entityPaths) {
           AnvilFormatSerializer.loadEntities(path, worldVersion, chunks);
         }
       }
     }
-    final var extra = Tag.createCompound();
-    final var properties = new RealmFormatPropertyMap();
+    final CompoundTag extra = Tag.createCompound();
+    final RealmFormatPropertyMap properties = new RealmFormatPropertyMap();
     properties.setValue(RealmFormatProperties.SPAWN_X, levelData.spawnX());
     properties.setValue(RealmFormatProperties.SPAWN_Y, levelData.spawnY());
     properties.setValue(RealmFormatProperties.SPAWN_Z, levelData.spawnZ());
@@ -85,7 +84,7 @@ public class AnvilFormatSerializer {
   }
 
   private boolean isEmpty(final byte[] array) {
-    for (final var b : array) {
+    for (final byte b : array) {
       if (b != 0) {
         return false;
       }
@@ -98,48 +97,55 @@ public class AnvilFormatSerializer {
     @NotNull final Path path,
     final int worldVersion
   ) throws IOException {
-    final var regionByteArray = Files.readAllBytes(path);
+    final byte[] regionByteArray = Files.readAllBytes(path);
     @Cleanup
-    final var inputStream = new DataInputStream(new ByteArrayInputStream(regionByteArray));
-    final var chunkEntries = new ArrayList<AnvilFormatChunkEntry>(1024);
-    for (var i = 0; i < 1024; i++) {
-      final var entry = inputStream.readInt();
-      final var chunkOffset = entry >>> 8;
-      final var chunkSize = entry & 15;
+    final DataInputStream inputStream = new DataInputStream(
+      new ByteArrayInputStream(regionByteArray)
+    );
+    final ArrayList<AnvilFormatChunkEntry> chunkEntries = new ArrayList<AnvilFormatChunkEntry>(
+      1024
+    );
+    for (int i = 0; i < 1024; i++) {
+      final int entry = inputStream.readInt();
+      final int chunkOffset = entry >>> 8;
+      final int chunkSize = entry & 15;
       if (entry != 0) {
-        final var chunkEntry = new AnvilFormatChunkEntry(
+        final AnvilFormatChunkEntry chunkEntry = new AnvilFormatChunkEntry(
           chunkOffset * AnvilFormatSerializer.SECTOR_SIZE,
           chunkSize * AnvilFormatSerializer.SECTOR_SIZE
         );
         chunkEntries.add(chunkEntry);
       }
     }
-    final var chunks = new HashMap<RealmFormatChunkPosition, RealmFormatChunk>();
-    for (final var entry : chunkEntries) {
+    final HashMap<RealmFormatChunkPosition, RealmFormatChunk> chunks =
+      new HashMap<RealmFormatChunkPosition, RealmFormatChunk>();
+    for (final AnvilFormatChunkEntry entry : chunkEntries) {
       @Cleanup
-      final var headerStream = new DataInputStream(
+      final DataInputStream headerStream = new DataInputStream(
         new ByteArrayInputStream(regionByteArray, entry.offset(), entry.paddedSize())
       );
-      final var chunkSize = headerStream.readInt() - 1;
-      final var compressionScheme = headerStream.readByte();
-      final var chunkStream = new DataInputStream(
+      final int chunkSize = headerStream.readInt() - 1;
+      final byte compressionScheme = headerStream.readByte();
+      final DataInputStream chunkStream = new DataInputStream(
         new ByteArrayInputStream(regionByteArray, entry.offset() + 5, chunkSize)
       );
-      final var decompressorStream = compressionScheme == 1
+      final InflaterInputStream decompressorStream = compressionScheme == 1
         ? new GZIPInputStream(chunkStream)
         : new InflaterInputStream(chunkStream);
       final CompoundTag tag;
-      try (final var reader = Tag.createReader(decompressorStream)) {
+      try (final NBTInputStream reader = Tag.createReader(decompressorStream)) {
         tag = reader.readCompoundTag();
       }
-      var global = tag.getCompoundTag("").orElseThrow();
-      final var innerLevel = global.getCompoundTag("Level");
+      CompoundTag global = tag
+        .getCompoundTag("")
+        .orElseThrow(() -> new IllegalStateException("Global tab not found!"));
+      final Optional<CompoundTag> innerLevel = global.getCompoundTag("Level");
       if (innerLevel.isPresent()) {
         global = innerLevel.get();
       }
-      final var chunk = AnvilFormatSerializer.readChunk(global, worldVersion);
+      final RealmFormatChunk chunk = AnvilFormatSerializer.readChunk(global, worldVersion);
       if (chunk != null) {
-        chunks.put(new RealmFormatChunkPosition(chunk.x(), chunk.z()), chunk);
+        chunks.put(RealmFormatChunkPosition.builder().x(chunk.x()).z(chunk.z()).build(), chunk);
       }
     }
     return chunks;
@@ -150,15 +156,17 @@ public class AnvilFormatSerializer {
     final int version,
     @NotNull final Map<RealmFormatChunkPosition, RealmFormatChunk> chunks
   ) throws IOException {
-    final var regionByteArray = Files.readAllBytes(path);
+    final byte[] regionByteArray = Files.readAllBytes(path);
     @Cleanup
-    final var input = new DataInputStream(new ByteArrayInputStream(regionByteArray));
-    final var chunkEntries = new ArrayList<AnvilFormatChunkEntry>(1024);
-    for (var i = 0; i < 1024; i++) {
-      final var entry = input.readInt();
+    final DataInputStream input = new DataInputStream(new ByteArrayInputStream(regionByteArray));
+    final ArrayList<AnvilFormatChunkEntry> chunkEntries = new ArrayList<AnvilFormatChunkEntry>(
+      1024
+    );
+    for (int i = 0; i < 1024; i++) {
+      final int entry = input.readInt();
       if (entry != 0) {
-        final var chunkOffset = entry >>> 8;
-        final var chunkSize = entry & 15;
+        final int chunkOffset = entry >>> 8;
+        final int chunkSize = entry & 15;
         chunkEntries.add(
           new AnvilFormatChunkEntry(
             chunkOffset * AnvilFormatSerializer.SECTOR_SIZE,
@@ -167,32 +175,39 @@ public class AnvilFormatSerializer {
         );
       }
     }
-    for (final var entry : chunkEntries) {
+    for (final AnvilFormatChunkEntry entry : chunkEntries) {
       @Cleanup
-      final var headerStream = new DataInputStream(
+      final DataInputStream headerStream = new DataInputStream(
         new ByteArrayInputStream(regionByteArray, entry.offset(), entry.paddedSize())
       );
-      final var chunkSize = headerStream.readInt() - 1;
+      final int chunkSize = headerStream.readInt() - 1;
       final int compressionScheme = headerStream.readByte();
-      final var chunkStream = new DataInputStream(
+      final DataInputStream chunkStream = new DataInputStream(
         new ByteArrayInputStream(regionByteArray, entry.offset() + 5, chunkSize)
       );
-      final var decompressorStream = compressionScheme == 1
+      final InflaterInputStream decompressorStream = compressionScheme == 1
         ? new GZIPInputStream(chunkStream)
         : new InflaterInputStream(chunkStream);
       @Cleanup
-      final var nbtStream = Tag.createReader(decompressorStream);
-      final var globalCompound = nbtStream.readCompoundTag().getCompoundTag("").orElseThrow();
+      final NBTInputStream nbtStream = Tag.createReader(decompressorStream);
+      final CompoundTag globalCompound = nbtStream
+        .readCompoundTag()
+        .getCompoundTag("")
+        .orElseThrow(() -> new IllegalStateException("Global tag not found!"));
       AnvilFormatSerializer.readEntityChunk(globalCompound, version, chunks);
     }
   }
 
   @Nullable
   private RealmFormatChunk readChunk(@NotNull final CompoundTag compound, final int worldVersion) {
-    final var chunkX = compound.getInteger("xPos").orElseThrow();
-    final var chunkZ = compound.getInteger("zPos").orElseThrow();
+    final int chunkX = compound
+      .getInteger("xPos")
+      .orElseThrow(() -> new IllegalStateException("xPos integer tag not found!"));
+    final int chunkZ = compound
+      .getInteger("zPos")
+      .orElseThrow(() -> new IllegalStateException("zPos integer tag not found!"));
     if (worldVersion >= 8) {
-      final var dataVersion = RealmFormat.dataVersionToWorldVersion(
+      final byte dataVersion = RealmFormat.dataVersionToWorldVersion(
         compound.getInteger("DataVersion").orElse(-1)
       );
       if (dataVersion != worldVersion) {
@@ -206,7 +221,7 @@ public class AnvilFormatSerializer {
         return null;
       }
     }
-    final var status = compound.getString("Status");
+    final Optional<String> status = compound.getString("Status");
     if (
       status.isPresent() &&
       !status.get().equals("postprocessed") &&
@@ -215,7 +230,7 @@ public class AnvilFormatSerializer {
       return null;
     }
     final int[] biomes;
-    final var biomesTag = compound.get("Biomes").orElse(Tag.createEnd());
+    final Tag biomesTag = compound.get("Biomes").orElse(Tag.createEnd());
     if (biomesTag.isIntArray()) {
       biomes = biomesTag.asIntArray().primitiveValue();
     } else if (biomesTag.isByteArray()) {
@@ -227,23 +242,31 @@ public class AnvilFormatSerializer {
     if (worldVersion >= 4) {
       heightMapsCompound = compound.getCompoundTag("Heightmaps").orElse(Tag.createCompound());
     } else {
-      final var heightMap = compound.getIntArray("HeightMap").orElseGet(() -> new int[256]);
+      final int[] heightMap = compound.getIntArray("HeightMap").orElseGet(() -> new int[256]);
       heightMapsCompound = Tag.createCompound().set("heightMap", Tag.createIntArray(heightMap));
     }
     final ListTag tileEntities;
     final ListTag entities;
     final ListTag sections;
-    var minSection = 0;
-    var maxSection = 16;
+    int minSection = 0;
+    int maxSection = 16;
     if (worldVersion < 8) {
       tileEntities = compound.getListTag("TileEntities").orElse(Tag.createList());
       entities = compound.getListTag("Entities").orElse(Tag.createList());
-      sections = compound.getListTag("Sections").orElseThrow();
+      sections =
+        compound
+          .getListTag("Sections")
+          .orElseThrow(() -> new IllegalStateException("Sections list tag not found!"));
     } else {
       tileEntities = compound.getListTag("block_entities").orElse(Tag.createList());
       entities = compound.getListTag("entities").orElse(Tag.createList());
-      sections = compound.getListTag("sections").orElseThrow();
-      final var yPos = compound.get("yPos").orElseThrow();
+      sections =
+        compound
+          .getListTag("sections")
+          .orElseThrow(() -> new IllegalStateException("sections list tag not found!"));
+      final Tag yPos = compound
+        .get("yPos")
+        .orElseThrow(() -> new IllegalStateException("yPos tag not found!"));
       if (yPos.isByte()) {
         minSection = yPos.asByte().byteValue();
       } else {
@@ -257,49 +280,65 @@ public class AnvilFormatSerializer {
           .orElse((byte) 0) +
         1;
     }
-    final var sectionArray = new RealmFormatChunkSection[maxSection - minSection];
-    for (final var section : sections) {
-      final var compoundTag = section.asCompound();
-      final var index = compoundTag.getByte("Y").orElseThrow();
+    final RealmFormatChunkSection[] sectionArray = new RealmFormatChunkSection[maxSection -
+    minSection];
+    for (final Tag section : sections) {
+      final CompoundTag compoundTag = section.asCompound();
+      final byte index = compoundTag.getByte("Y").orElseThrow();
       if (worldVersion < 7 && index < 0) {
         continue;
       }
-      final var builder = RealmFormatChunkSectionV1.builder();
+      final RealmFormatChunkSectionV1.RealmFormatChunkSectionV1Builder builder =
+        RealmFormatChunkSectionV1.builder();
       if (worldVersion < 4) {
-        final var data = compoundTag.getByteArray("Data").orElseThrow();
+        final byte[] data = compoundTag
+          .getByteArray("Data")
+          .orElseThrow(() -> new IllegalStateException("Data byte tag not found!"));
         if (AnvilFormatSerializer.isEmpty(data)) {
           continue;
         }
-        builder.blockDataV1_8(new BlockDataV1_8(new NibbleArray(data)));
+        builder.blockDataV1_8(BlockDataV1_8.builder().data(new NibbleArray(data)).build());
       } else if (worldVersion < 8) {
-        final var palette = compoundTag.getListTag("Palette").orElse(null);
-        final var blockStates = compoundTag.getLongArray("BlockStates").orElse(null);
+        final ListTag palette = compoundTag.getListTag("Palette").orElse(null);
+        final long[] blockStates = compoundTag.getLongArray("BlockStates").orElse(null);
         if (palette == null || blockStates == null || AnvilFormatSerializer.isEmpty(blockStates)) {
           continue;
         }
         builder.blockDataV1_14(new BlockDataV1_14(palette, blockStates));
       } else {
-        final var blockStatesOptional = compoundTag.getCompoundTag("block_states");
-        final var biomesOptional = compoundTag.getCompoundTag("biomes");
-        if (blockStatesOptional.isEmpty() || biomesOptional.isEmpty()) {
+        final Optional<CompoundTag> blockStatesOptional = compoundTag.getCompoundTag(
+          "block_states"
+        );
+        final Optional<CompoundTag> biomesOptional = compoundTag.getCompoundTag("biomes");
+        if (!blockStatesOptional.isPresent() || !biomesOptional.isPresent()) {
           continue;
         }
         builder.blockDataV1_18(
-          new BlockDataV1_18(blockStatesOptional.orElseThrow(), biomesOptional.orElseThrow())
+          BlockDataV1_18
+            .builder()
+            .blockStates(
+              blockStatesOptional.orElseThrow(() ->
+                new IllegalStateException("block_states tag not found!")
+              )
+            )
+            .biomes(
+              biomesOptional.orElseThrow(() -> new IllegalStateException("biomes tag not found!"))
+            )
+            .build()
         );
       }
-      final var blockLightArray = compoundTag
+      final NibbleArray blockLightArray = compoundTag
         .getByteArray("BlockLight")
         .map(NibbleArray::new)
         .orElse(null);
-      final var skyLightArray = compoundTag
+      final NibbleArray skyLightArray = compoundTag
         .getByteArray("SkyLight")
         .map(NibbleArray::new)
         .orElse(null);
       sectionArray[index - minSection] =
         builder.blockLight(blockLightArray).skyLight(skyLightArray).build();
     }
-    for (final var section : sectionArray) {
+    for (final RealmFormatChunkSection section : sectionArray) {
       if (section != null) {
         return RealmFormatChunkV1
           .builder()
@@ -323,10 +362,12 @@ public class AnvilFormatSerializer {
     final int version,
     @NotNull final Map<RealmFormatChunkPosition, RealmFormatChunk> chunks
   ) {
-    final var position = compound.getIntArray("Position").orElseThrow();
-    final var chunkX = position[0];
-    final var chunkZ = position[1];
-    final var dataVersion = RealmFormat.dataVersionToWorldVersion(
+    final int[] position = compound
+      .getIntArray("Position")
+      .orElseThrow(() -> new IllegalStateException("Position int array tag not found!"));
+    final int chunkX = position[0];
+    final int chunkZ = position[1];
+    final byte dataVersion = RealmFormat.dataVersionToWorldVersion(
       compound.getInteger("DataVersion").orElse(-1)
     );
     if (dataVersion != version) {
@@ -339,11 +380,15 @@ public class AnvilFormatSerializer {
       );
       return;
     }
-    final var chunk = chunks.get(new RealmFormatChunkPosition(chunkX, chunkZ));
+    final RealmFormatChunk chunk = chunks.get(
+      RealmFormatChunkPosition.builder().x(chunkX).z(chunkZ).build()
+    );
     if (chunk == null) {
       System.out.printf("Lost entity chunk data at: %s %s%n", chunkX, chunkZ);
     } else {
-      for (final var tag : compound.getListTag("Entities").orElseThrow()) {
+      for (final Tag tag : compound
+        .getListTag("Entities")
+        .orElseThrow(() -> new IllegalStateException("Entities list tag not found!"))) {
         chunk.entities().add(tag);
       }
     }
@@ -352,28 +397,30 @@ public class AnvilFormatSerializer {
   @NotNull
   private AnvilFormatLevelData readLevelData(@NotNull final Path path) throws IOException {
     final CompoundTag tag;
-    try (final var reader = Tag.createGZIPReader(new FileInputStream(path.toFile()))) {
+    try (final NBTInputStream reader = Tag.createGZIPReader(Files.newInputStream(path))) {
       tag = reader.readCompoundTag();
     }
-    final var dataTag = tag
+    final CompoundTag dataTag = tag
       .getCompoundTag("")
       .orElseThrow(() -> new IllegalStateException("This file is not a proper level.dat file!"))
       .getCompoundTag("Data")
       .orElseThrow(() -> new IllegalStateException("This file is not a proper level.dat file!"));
-    final var worldVersionOptional = dataTag.getInteger("DataVersion");
-    final var worldVersion = RealmFormat.dataVersionToWorldVersion(worldVersionOptional.orElse(-1));
-    final var spawnX = dataTag.getInteger("SpawnX").orElse(0);
-    final var spawnY = dataTag.getInteger("SpawnY").orElse(255);
-    final var spawnZ = dataTag.getInteger("SpawnZ").orElse(0);
-    final var gameRules = new HashMap<String, String>();
-    final var rules = dataTag.getCompoundTag("GameRules").orElse(Tag.createCompound());
+    final OptionalInt worldVersionOptional = dataTag.getInteger("DataVersion");
+    final byte worldVersion = RealmFormat.dataVersionToWorldVersion(
+      worldVersionOptional.orElse(-1)
+    );
+    final int spawnX = dataTag.getInteger("SpawnX").orElse(0);
+    final int spawnY = dataTag.getInteger("SpawnY").orElse(255);
+    final int spawnZ = dataTag.getInteger("SpawnZ").orElse(0);
+    final HashMap<String, String> gameRules = new HashMap<String, String>();
+    final CompoundTag rules = dataTag.getCompoundTag("GameRules").orElse(Tag.createCompound());
     rules.all().forEach((key, value) -> gameRules.put(key, value.asString().value()));
     return new AnvilFormatLevelData(worldVersion, gameRules, spawnX, spawnY, spawnZ);
   }
 
   private int@NotNull[] toIntArray(final byte@NotNull[] buf) {
-    final var buffer = ByteBuffer.wrap(buf).order(ByteOrder.BIG_ENDIAN);
-    final var ret = new int[buf.length / 4];
+    final ByteBuffer buffer = ByteBuffer.wrap(buf).order(ByteOrder.BIG_ENDIAN);
+    final int[] ret = new int[buf.length / 4];
     buffer.asIntBuffer().get(ret);
     return ret;
   }
